--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fase III - Cinemática</title>
-    <link rel="stylesheet" href="../src/css/phase_03.css" />
+    <title>Fase principal - Cinemática</title>
+    <link rel="stylesheet" href="../src/css/phase_main.css" />
     <link rel="stylesheet" href="../src/css/bootstrap.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
-
   <body class="bg-dark">
     <section id="initial-screen" class="d-block w-100 position-absolute">
       <div class="d-flex justify-content-center align-items-center vh-100">
         <button
           data-start-game-desktop
-          class="btn btn-primary d-sm-none d-lg-inline"
+          class="btn btn-primary d-none d-lg-inline"
         >
           Começar jogo
         </button>
 
-        <button data-start-game-mobile class="btn btn-primary btn-sm d-lg-none">
+        <button
+          data-start-game-mobile
+          class="btn btn-primary btn-sm d-sm-inline-block d-lg-none"
+        >
           Começar jogo
         </button>
       </div>
@@ -30,7 +31,11 @@
       class="vh-100 d-flex flex-column justify-content-center align-items-center"
     >
       <header class="w-75 d-flex justify-content-around align-items-center p-1">
-        <div class="d-flex align-items-center">
+        <p class="text-white m-0">
+          Número de tentativas: <span data-attempts>3</span>
+        </p>
+
+        <div class="d-flex justify-content-center align-items-center">
           <i class="ph-fill ph-timer" style="color: white"></i>
           <p data-timer-display class="text-white m-0">3:00</p>
         </div>
@@ -68,22 +73,22 @@
 
         <div class="d-block p-3 text-end">
           <button
-            data-show-question-desktop
+            data-show-question-mobile
             type="button"
-            class="btn btn-info d-sm-none d-lg-inline"
+            class="btn btn-info btn-sm d-lg-none"
             data-bs-toggle="modal"
-            data-bs-target="#question-desktop"
+            data-bs-target="#question-mobile"
             disabled
           >
             Mostrar pergunta
           </button>
 
           <button
-            data-show-question-mobile
+            data-show-question-desktop
             type="button"
-            class="btn btn-info btn-sm d-lg-none d-sm-inline"
+            class="btn btn-info d-none d-lg-inline"
             data-bs-toggle="modal"
-            data-bs-target="#question-mobile"
+            data-bs-target="#question-desktop"
             disabled
           >
             Mostrar pergunta
@@ -92,81 +97,78 @@
 
         <!-- MRU -->
         <div data-armadillo class="object position-absolute">
-          <div id="armadillo" class="armadillo">
-            <p data-time-text class="text-center mb-0 fw-bold">
-              <span data-time-text>t = 0s</span> <br />
-              0m
-            </p>
-          </div>
+          <div id="armadillo" class="armadillo"></div>
         </div>
 
-        <div class="object position-absolute">
-          <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 0s <br />0m</p>
-          </div>
-        </div>
-
-        <div class="object position-absolute d-none">
-          <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 1s <br />5m</p>
-          </div>
-        </div>
-
-        <div class="object position-absolute d-none">
-          <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 2s <br />10m</p>
-          </div>
-        </div>
-
-        <div class="object position-absolute d-none">
-          <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 3s <br />15m</p>
-          </div>
+        <div data-fox class="object-2 position-absolute">
+          <div class="fox"></div>
         </div>
 
         <!-- Modal para mostrar a questão (mobile) -->
-        <div id="question-mobile" class="modal fade">
-          <div class="modal-dialog modal-sm modal-dialog-scrollable">
+        <div id="question-mobile" class="modal d-lg-none fade">
+          <div class="modal-dialog modal-lg modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <p>Com base na trajetória do Tatu, qual é a sua velocidade?</p>
-                <button
-                  type="button"
-                  class="btn btn-close btn-sm"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
+                <h5 class="fs-6">
+                  Um tatu está fugindo de uma raposa e, para se salvar, ele
+                  precisa chegar à sua toca. Sua tarefa é descobrir a velocidade
+                  <strong>mínima</strong> do tatu para que ele fuja do predador!
+                </h5>
               </div>
 
               <div class="modal-body">
+                <p class="texte-center text-black fs-6">
+                  <strong>Dados</strong>: leve em consideração que, no instante
+                  de sua observação, o tatu encontra-se em repouso e à 430m do
+                  seu destino. Considere o movimento descrito por ele como sendo
+                  Retilíneo Uniforme e o tempo que ele leva para chegar 250m,
+                  como sendo 25s. A raposa encontra-se com velocidade constante
+                  igual a 20m/s e a distância atual entre ela e o tatu é de
+                  200m.
+                </p>
+
                 <div class="form-check">
                   <input
+                    role="button"
                     type="radio"
+                    name="velocity"
                     class="form-check-input"
-                    id="radio-one"
-                    name="option"
+                    id="radio1"
                   />
-                  <label class="form-check-label" for="radio-one">15m/s</label>
+                  <label class="text-black" for="radio1">4m/s</label>
                 </div>
 
                 <div class="form-check">
                   <input
+                    role="button"
                     type="radio"
+                    name="velocity"
                     class="form-check-input"
-                    id="radio-two"
-                    name="option"
+                    id="radio2"
                   />
-                  <label class="form-check-label" for="radio-two">10m/s</label>
+                  <label class="text-black" for="radio2">6m/s</label>
                 </div>
 
                 <div class="form-check">
                   <input
+                    role="button"
                     type="radio"
+                    name="velocity"
                     class="form-check-input"
-                    id="radio-three"
-                    name="option"
+                    id="radio3"
                   />
-                  <label class="form-check-label" for="radio-three">5m/s</label>
+                  <label class="text-black" for="radio3">8m/s</label>
+                </div>
+
+                <div class="form-check">
+                  <input
+                    role="button"
+                    type="radio"
+                    name="velocity"
+                    class="form-check-input"
+                    id="radio4"
+                  />
+                  <label class="text-black" for="radio4">10m/s</label>
                 </div>
               </div>
 
@@ -196,49 +198,69 @@
 
         <!-- Modal para mostrar a questão (desktop) -->
         <div id="question-desktop" class="modal fade">
-          <div class="modal-dialog modal-dialog-scrollable">
+          <div class="modal-dialog modal-lg modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <p>Com base na trajetória do Tatu, qual é a sua velocidade?</p>
-                <button
-                  type="button"
-                  class="btn btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
+                <p class="modal-title">
+                  Um tatu está fugindo de uma raposa e, para se salvar, ele
+                  precisa chegar à sua toca. Sua tarefa é descobrir a velocidade
+                  <strong>mínima</strong> do tatu para que ele fuja do predador!
+                </p>
               </div>
 
               <div class="modal-body">
+                <p class="texte-center text-black">
+                  <strong>Dados</strong>: leve em consideração que, no instante
+                  de sua observação, o tatu encontra-se em repouso e à 430m do
+                  seu destino. Considere o movimento descrito por ele como sendo
+                  Retilíneo Uniforme e o tempo que ele leva para chegar 250m,
+                  como sendo 25s. A raposa encontra-se com velocidade constante
+                  igual a 20m/s e a distância atual entre ela e o tatu é de
+                  200m.
+                </p>
+
                 <div class="form-check">
                   <input
+                    role="button"
                     type="radio"
+                    name="velocity"
                     class="form-check-input"
-                    id="radio-three"
-                    name="option"
+                    id="radio5"
                   />
-                  <label class="form-check-label" for="radio-three"
-                    >15m/s</label
-                  >
+                  <label class="text-black" for="radio5">4m/s</label>
                 </div>
 
                 <div class="form-check">
                   <input
+                    role="button"
                     type="radio"
+                    name="velocity"
                     class="form-check-input"
-                    id="radio-four"
-                    name="option"
+                    id="radio6"
                   />
-                  <label class="form-check-label" for="radio-four">10m/s</label>
+                  <label class="text-black" for="radio6">6m/s</label>
                 </div>
 
                 <div class="form-check">
                   <input
+                    role="button"
                     type="radio"
+                    name="velocity"
                     class="form-check-input"
-                    id="radio-five"
-                    name="option"
+                    id="radio7"
                   />
-                  <label class="form-check-label" for="radio-five">5m/s</label>
+                  <label class="text-black" for="radio7">8m/s</label>
+                </div>
+
+                <div class="form-check">
+                  <input
+                    role="button"
+                    type="radio"
+                    name="velocity"
+                    class="form-check-input"
+                    id="radio8"
+                  />
+                  <label class="text-black" for="radio8">10m/s</label>
                 </div>
               </div>
 
@@ -269,7 +291,7 @@
         <!-- Modal para próxima fase (mobile) -->
         <div
           id="next-phase-modal-mobile"
-          class="modal fade d-lg-none"
+          class="modal fade"
           data-bs-backdrop="static"
           data-bs-keyboard="false"
           tabindex="-1"
@@ -277,7 +299,7 @@
           aria-labelledby="modalLabel"
           aria-hidden="true"
         >
-          <div class="modal-dialog modal-sm" role="document">
+          <div class="modal-dialog modal-sm d-lg-none" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
@@ -288,7 +310,7 @@
                 </p>
 
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_main_02.html"
                   role="button"
                   class="btn btn-primary btn-sm"
                   >Próxima fase</a
@@ -320,7 +342,7 @@
                 </p>
 
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_main_02.html"
                   role="button"
                   class="btn btn-primary"
                   >Próxima fase</a
@@ -332,8 +354,8 @@
 
         <!-- Modal para mostrar que o tempo acabou (mobile) -->
         <div
-          id="time-over-modal-mobile"
-          class="modal fade d-lg-none"
+          id="timeOverModal-mobile"
+          class="modal fade"
           data-bs-backdrop="static"
           data-bs-keyboard="false"
           tabindex="-1"
@@ -347,13 +369,13 @@
                 <h5 class="modal-title" id="modalLabel">Tempo esgotado</h5>
               </div>
               <div class="modal-body">
-                <p class="textWin">
+                <p class="textWin fs-6">
                   Infelizmente o tempo acabou! Siga para o próximo desafio.
                 </p>
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_main_02.html"
                   role="button"
                   class="btn btn-secondary btn-sm"
                 >
@@ -366,7 +388,7 @@
 
         <!-- Modal para mostrar que o tempo acabou (desktop) -->
         <div
-          id="time-over-modal-desktop"
+          id="timeOverModal-desktop"
           class="modal fade"
           data-bs-backdrop="static"
           data-bs-keyboard="false"
@@ -387,7 +409,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_main_02.html"
                   role="button"
                   class="btn btn-secondary"
                 >
@@ -398,7 +420,7 @@
           </div>
         </div>
 
-        <!-- Modal para informar que a resposta está errada (mobile)-->
+        <!-- Modal para informar uma nova tentativa (mobile)-->
         <div
           id="game-over-modal-mobile"
           class="modal fade"
@@ -419,25 +441,23 @@
                 ></button>
               </div>
               <div class="modal-body">
-                <p class="textWin">
-                  Não foi dessa vez! Siga para o próximo desafio.
-                </p>
+                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
               </div>
               <div class="modal-footer">
-                <a
-                  href="./phase_main_01.html"
-                  role="button"
+                <button
+                  data-reset-mobile
                   class="btn btn-danger btn-sm"
+                  data-bs-dismiss="modal"
                 >
-                  Próximo desafio
+                  Fechar
                   <i class="bi bi-pause"></i>
-                </a>
+                </button>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Modal para informar que a resposta está errada (desktop) -->
+        <!-- Modal para informar uma nova tentativa (desktop) -->
         <div
           id="game-over-modal-desktop"
           class="modal fade"
@@ -457,19 +477,93 @@
                   aria-label="Fechar"
                 ></button>
               </div>
+
               <div class="modal-body">
-                <p class="textWin">
-                  Não foi dessa vez! Siga para o próximo desafio.
+                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+              </div>
+
+              <div class="modal-footer">
+                <button
+                  data-reset-desktop
+                  class="btn btn-danger"
+                  data-bs-dismiss="modal"
+                >
+                  Fechar
+                  <i class="bi bi-pause"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal para mostrar que o número de tentaivas acabou (mobile) -->
+        <div
+          id="attemptsGoneModal-mobile"
+          class="modal fade"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          role="dialog"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <p id="modalLabel" class="h5 modal-title">
+                  Ops, o número de tentativas acabou!
                 </p>
               </div>
+
+              <div class="modal-body">
+                <p class="textWin">
+                  Infelizmente você não poderá mais responder a essa pergunta.
+                </p>
+              </div>
+
               <div class="modal-footer">
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_main_02.html"
+                  class="btn btn-primary btn-sm d-none"
                   role="button"
-                  class="btn btn-danger btn-sm"
                 >
-                  Próximo desafio
-                  <i class="bi bi-pause"></i>
+                  Próxima fase
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal para mostrar que o número de tentaivas acabou (desktop) -->
+        <div
+          id="attemptsGoneModal-desktop"
+          class="modal fade"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          role="dialog"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <p id="modalLabel" class="h5 modal-title">
+                  Ops, o número de tentativas acabou!
+                </p>
+              </div>
+
+              <div class="modal-body">
+                <p class="textWin">
+                  Infelizmente você não poderá mais responder a essa pergunta.
+                </p>
+              </div>
+
+              <div class="modal-footer">
+                <a
+                  href="./phase_main_02.html"
+                  class="btn btn-primary d-none"
+                  role="button"
+                >
+                  Próxima fase
                 </a>
               </div>
             </div>
@@ -478,7 +572,7 @@
       </main>
     </section>
 
-    <script type="module" src="../src/js/phase_03.js"></script>
+    <script type="module" src="../src/js/phase_main_01.js"></script>
     <script src="../src/js/bootstrap.min.js"></script>
   </body>
 </html>
